# XR3DV

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
config/: xr3dv.ini.example
scripts/: install.cmd  install.ps1  uninstall.cmd  uninstall.ps1
src/: actions.cpp  config.cpp  config.h  d3d9_presenter.cpp  d3d9_presenter.h  logging.cpp  logging.h  main.cpp  nvapi_stereo.cpp  nvapi_stereo.h  pch.cpp  pch.h  present_hook.cpp  present_hook.h  runtime.cpp  runtime.h  session.cpp  session.h  space.cpp  swapchain.cpp  swapchain.h  timing.cpp  timing.h  xr3dv.def  xr3dv_diag.cpp
